--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "knip": "knip"
+    "knip": "knip",
+    "jest": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.5",
     "jest": "^29.7.0",
     "knip": "^2.31.0",
     "ts-jest": "^29.1.1",
