--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~types": ["src/types"]
+      "~types": ["./src/types"],
+      "~server": ["./src/server"],
+      "~server/*": ["./src/server/*"]
     }
   }
 }
